@@ -1,5 +1,8 @@
 [b]Version 0.5.61[/b] (not released yet):
 
+(2007-09-27)
+ * Updated the Polish translation.
+
 (2007-09-26)
  * Updated the Polish translation.
  * Now if a smplayer.ini is found on the application directory, it will be 
